BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_Billing_Identity__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Complement__c</fullName>
        <label>Complement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Identities</relationshipLabel>
        <relationshipName>Billing_Identities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chilean Tax Identification Number (RUT)</fullName>
                </value>
                <value>
                    <fullName>Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Foreigner ID</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
                <value>
                    <fullName>Peru Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Number (NIT)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner Id</fullName>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Chilean Identity Card (RUN)</fullName>
                </value>
                <value>
                    <fullName>Voting Card</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Driver License</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Legal Person</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Natural Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HSvc_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HSvc_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Billing Identity</label>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Billing Identity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Identities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>